Dev 486 new create bounty modal (#457)
* removing pull request verification from network

* adding done icon

* creating simple bounty modal and progress bar

* adding initial logic bounty and fuding

* adding initial additional details

* componentizing details page

* adjusting info-icon-empty

* removing warnings

* adjusting logic IconEmpty

* creating handleEurConversion helper

* adjusting handleEurConversion to proposal-merge

* componentizing details

* componentizing tokenAmount

* changing branch-dropdown

* chaging repos-dropdown

* adjusting tokens-dropdown

* first complex logic create-bounty

* adding currentValue to token

* componentizing progress bounty

* adding reward logic and create bounty simple

* adding review to drag and drop

* adding createIssue flow

* css style create-bounty

* adding UserAddress

* adding simple logic TokensDropdown

* merge fixes

* adding pro select token logic and fixes

* new logic tokens-dropdown

* adding translations and rendering logic

* removing ReadOnlyButton

* adjusting buttons and translations

* adding logic to create simple funding request

* adjusting and corrections

* fix setAmount

* removing double name "bounty"

* adding logic for select token and review mode

* adding defaultTokens logic

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -270,6 +270,29 @@ li {
   }
 }
 
+.container-bounty {
+  height: 63px;
+  border-radius: 8px;
+  cursor: pointer;
+  border: none;
+
+  &.bg-30,
+  &.bg-30-hover:hover {
+    background-color: rgba(var(--bs-primary-rgb), 0.3) !important;
+    border: 2px solid $primary !important;
+  }
+}
+
+.funding-type {
+  background-color: rgba(var(--bs-primary-rgb), 0.3) !important;
+  border: 2px solid $primary !important;
+}
+
+.info-amount {
+  border-radius: 4px;
+}
+
+
 .p-nm {
   font-size: 14px;
   line-height: 140%;
@@ -793,6 +816,10 @@ label {
   width: 2px;
 }
 
+.issue-progress-vertical {
+  height: 2px;
+}
+
 .material-icons {
   &.md-small {
     font-size: 16px;
@@ -1136,7 +1163,6 @@ a.row-button svg {
 }
 
 textarea.form-control {
-  resize: none;
   border-radius: math.div($m, 2);
 }
 
@@ -1315,8 +1341,17 @@ textarea.form-control {
   }
 }
 
+.color-light-gray {
+  color: $ligth-gray
+}
+
+.custom-color-input {
+  width: 38px;
+  height: 38px;
+
 .custom-color-input-wrapper {
   padding: 10px 20px;
+
 
   .custom-color-input {
     width: 25px;
@@ -1512,7 +1547,7 @@ input[type="color"] {
 0%{background-position:right}
 50%{background-position:left}
 100%{background-position:right}
-}
+}}
 
 .nav-avatar {
   .text-primary {
