--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1349,10 +1349,6 @@ textarea.form-control {
   color: $ligth-gray
 }
 
-.custom-color-input {
-  width: 38px;
-  height: 38px;
-
 .custom-color-input-wrapper {
   padding: 10px 20px;
 
@@ -1361,7 +1357,7 @@ textarea.form-control {
     width: 25px;
     height: 25px;
 
-    border-radius: 25px;
+    border-radius: 50%;
     border: 2px solid $white;
 
     &.is-invalid {
@@ -1548,10 +1544,10 @@ input[type="color"] {
 }
 
 @keyframes grandient-loop {
-0%{background-position:right}
-50%{background-position:left}
-100%{background-position:right}
-}}
+  0%{background-position:right}
+  50%{background-position:left}
+  100%{background-position:right}
+}
 
 .nav-avatar {
   .text-primary {
