new repository component

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -258,6 +258,10 @@ li {
   max-width: 235px;
 }
 
+.max-width-content {
+  width: max-content;
+}
+
 .github-info {
   padding: 2px 3px;
   border: 1px solid;
