Dev 469 other profile pages (#475)
* payments page

* bounties, proposals and pull requests pages

* custom networks styles cant be applied to those paths

* comparing name instead of address, because in dev addres can be diff

* adding token icon placeholder

* my network page

* fixing styles

* new components to network settings fields

* using new component and values exported by the context

* using new component

* adding option to hide label

* adding arrow down icon and forcing show all colors if colors are invalid

* handling more infos of my network settings

* logging contracts adresses

* new repository component

* adding other parameters

* providing a function to update network data

* handling treasury info loading

* fix on change function

* more work

* refactoring component

* adding prop to verify the need of get tokens balance

* updating data after submit

* adding lower case to network name

* fix typo

* fix redirects

* removing account pages

* adding translations

* redirect to profile

* fix typo

* review fixes

* refactoring dao service

* fix reading of undefined

* bounty data must be saved even if github request fail

* hiding menu when a link is clicked

* we need to set undefined, so page show "you don't have a network..."

* coinInfo can be undefined

* fixes

* using button instead of anchor, because of semantic

* no need to load network, as this component depends of current network

* adding review suggestion

* adding review suggestions

* updating when page change

* move create bounty modal into repos provider and refactor show logic

* fix bootstrap version

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -57,7 +57,7 @@ li {
   list-style: none;
 }
 
-.cursor-now-allowed {
+.cursor-not-allowed {
   cursor: not-allowed;
 }
 
@@ -256,6 +256,10 @@ li {
 
 .mw-github-info {
   max-width: 235px;
+}
+
+.max-width-content {
+  width: max-content;
 }
 
 .github-info {
@@ -1349,10 +1353,6 @@ textarea.form-control {
   color: $ligth-gray
 }
 
-.custom-color-input {
-  width: 38px;
-  height: 38px;
-
 .custom-color-input-wrapper {
   padding: 10px 20px;
 
@@ -1361,7 +1361,7 @@ textarea.form-control {
     width: 25px;
     height: 25px;
 
-    border-radius: 25px;
+    border-radius: 50%;
     border: 2px solid $white;
 
     &.is-invalid {
@@ -1548,10 +1548,10 @@ input[type="color"] {
 }
 
 @keyframes grandient-loop {
-0%{background-position:right}
-50%{background-position:left}
-100%{background-position:right}
-}}
+  0%{background-position:right}
+  50%{background-position:left}
+  100%{background-position:right}
+}
 
 .nav-avatar {
   .text-primary {
