--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1226,6 +1226,11 @@ textarea.form-control {
 
     &:focus-within {
       border-color: var(--bs-primary);
+
+      .input-group-text {
+        border: 0 !important;
+        background-color: $black;
+      }
     }
 
     input {
@@ -1239,6 +1244,8 @@ textarea.form-control {
 
     button {
       background-color: $black;
+      border-top-right-radius: math.div($m, 2);
+      border-bottom-right-radius: math.div($m, 2);
 
       svg {
         color: var(--bs-primary);
