adding funding section

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1618,3 +1618,10 @@ input[type="color"] {
     border-right: 1px solid $disabled;
   }
 }
+.svg {
+  &-white-40 {
+    svg {
+      color: rgba($white, 0.4) !important;
+    }
+  }
+}
