more work on funding section

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1619,9 +1619,19 @@ input[type="color"] {
   }
 }
 .svg {
+  &-gray {
+    svg {
+      color: $gray !important;
+    }
+  }
+
   &-white-40 {
     svg {
       color: rgba($white, 0.4) !important;
     }
   }
+}
+
+.border-bottom-dashed {
+  border-bottom: 1px dashed $white;
 }
