--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -46,10 +46,12 @@ $more-bg: (
   "blue": $blue,
   "success": $success,
   "success-15": rgba($success, 0.15),
+  "success-50": rgba($success, 0.5),
   "dark-gray": $dark-gray,
   "ligth-gray": $ligth-gray,
   "disabled": $disabled,
   "danger": $danger,
+  "danger-50": rgba($danger, 0.5),
   "warning": $warning,
   "warning-opac-25": rgba($warning, 0.25),
   "danger-opac-25": rgba($warning, 0.25),
