--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -669,8 +669,13 @@ label {
   border-radius: 54px;
 }
 
-.text-new-bounty {
+.new-bounty {
   height: 10px;
+  svg {
+    width: 14px !important;
+    height: 14px !important;
+    margin-bottom: 2px;
+  }
 }
 
 .font-weight-normal {
