Dev 487 new funding design for bounty page (#494)
* fix invalid date

* adding margin to close button

* handling funding data

* adding type

* adding funding section

* adding props

* new erc20 hook

* user should be able to create a bounty even if github is not connected

* more work on funding section

* retract funds

* only show manage funds if bounty is in draft

* using property provided by the contract

* fix condition

* fix eslint warnings

* fix

* removing console.log

* adding network endpoint

* adding translations

* fix version

* review fixes

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1618,3 +1618,20 @@ input[type="color"] {
     border-right: 1px solid $disabled;
   }
 }
+.svg {
+  &-gray {
+    svg {
+      color: $gray !important;
+    }
+  }
+
+  &-white-40 {
+    svg {
+      color: rgba($white, 0.4) !important;
+    }
+  }
+}
+
+.border-bottom-dashed {
+  border-bottom: 1px dashed $white;
+}
