Dev 374 summarized bounty state page in case user is on mobile no metamask (#502)
* refactoring bounty list

* adding fundingAmount

* adjusting state

* adding className to Identicon component

* removing imports

* fix type

* adjusting bounty-status-info

* adding logic proposal

* adding funding state

* changing sm identicon

* fix

* removing react element label

* adding GetIssueState Helper

* creating GetIssueState Helper

* adding mobile mode

* changing the structure of web3Dialog

* adding "?"

* fix width

* adjusting mobile mode and structure web3Dialog

* rm console

* rm verify wallet

* fix translations plurals

* rm class new-bounty

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -694,15 +694,6 @@ label {
   border-radius: 54px;
 }
 
-.new-bounty {
-  height: 10px;
-  svg {
-    width: 14px !important;
-    height: 14px !important;
-    margin-bottom: 2px;
-  }
-}
-
 .font-weight-normal {
   font-weight: normal !important;
 }
@@ -1581,6 +1572,10 @@ input[type="color"] {
   .read-only-button {
     pointer-events: none !important;
   }
+}
+
+.read-only-button {
+  pointer-events: none !important;
 }
 
 .svg {
