adding remove account button, modal and reset account endpoint

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1586,6 +1586,13 @@ input[type="color"] {
       }
     }
   }
+  &-warning {
+    svg {  
+      path {
+        fill: var(--bs-warning);
+      }
+    }
+  }
 }
 
 .nav-link-gradient {
