fix border color

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -477,7 +477,7 @@ li {
   color: $white;
   padding-top: ($navbar-height + $m + 4);
   padding-bottom: $m + 4;
-  border-bottom: 1px solid $disabled;
+  border-bottom: 1px solid $dark-gray;
 }
 
 // Remove: After update all headers
