--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -295,13 +295,13 @@ li {
   &.bg-30,
   &.bg-30-hover:hover {
     background-color: rgba(var(--bs-primary-rgb), 0.3) !important;
-    border: 2px solid $primary !important;
+    border: 2px solid var(--bs-primary) !important;
   }
 }
 
 .funding-type {
   background-color: rgba(var(--bs-primary-rgb), 0.3) !important;
-  border: 2px solid $primary !important;
+  border: 2px solid var(--bs-primary) !important;
 }
 
 .info-amount {
