Dev 969 read only wrapper is notworking (#625)
* DEV-969 fix wrapper button

* DEV-969 disable interaction profile pages

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -345,10 +345,14 @@ li {
   width: auto;
 }
 
-.main-nav {
-  width: 100%;
+.nav-container{
   position: fixed;
   z-index: 5;
+  width: 100%;
+}
+
+.main-nav {
+  width: 100%;
   min-height: $navbar-height;
 
   .brand {
@@ -1502,8 +1506,17 @@ input[type="color"] {
 }
 
 .read-only-network {
+  #root-container{
+    padding-top: $navbar-height + 30px;
+  }
   .read-only-wrapper {
-    cursor: not-allowed !important;
+    // cursor: not-allowed !important;
+     button, a, input, select,
+     .react-select-container{
+      cursor: not-allowed !important;
+      pointer-events: none;
+      opacity: 0.65;
+    }
   }
 
   .read-only-button {
