--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -194,6 +194,7 @@ li {
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
+        padding-right: 0;
       }
     }
     &__option {
