DEV-964 fix react select index

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -181,6 +181,7 @@ li {
       border-radius: 8px;
       border: 1px solid $light-gray;
       background-color: $bg-shadow;
+      z-index: 4;
 
       &-list {
         padding-top: 0;
