--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -177,7 +177,7 @@ li {
       color: transparentize($white, 0.4);
     }
     &__menu {
-      min-width: 210px;
+      // min-width: 210px;
       border-radius: 8px;
       border: 1px solid $light-gray;
       background-color: $bg-shadow;
