--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -15,11 +15,18 @@ $light-warning: #CCAB38;
 //Specials
 $dark-gray: #20222b;
 $gray: #c4c7d3;
+$gray-500: #73758C;
+$gray-850: #23232A;
+$gray-900: #17171C;
+$gray-950: #0C0C0E;
 $light-gray: #434758;
 $blue: #4250e4;
 $blue-dark: #283089;
 // Fix-ME: Remove disabled color
 $disabled: #423b51;
+
+
+$orange-500: #FF6A2C;
 
 $bg: #0d0f19;
 $bg-opac: rgba($white, 0.1);
@@ -62,14 +69,23 @@ $more-bg: (
   "white-50": rgba($white, 0.5),
   "white-70": rgba($white, 0.7),
   "danger-10": rgba($danger, 0.1),
+  "danger-80": rgba($danger, 0.8),
   "info-10": rgba($info, 0.1),
   "primary-30": rgba($primary, 0.3),
   "info-30": rgba($info, 0.3),
+  "info-80": rgba($info, 0.8),
   "success-30": rgba($success, 0.3),
+  "success-80": rgba($success, 0.8),
   "danger-30": rgba($danger, 0.3),
   "danger-70": rgba($danger, 0.7),
   "warning-30": rgba($warning, 0.3),
   "gray-70": rgba($gray, 0.7),
+  "gray-500": $gray-500,
+  "gray-850": $gray-850,
+  "gray-900": $gray-900,
+  "gray-950": $gray-950,
+  "orange-500": $orange-500,
+  "orange-800": rgba($orange-500, 0.8),
   "light-warning-30": rgba($light-warning, 0.3),
   "light-warning": $light-warning,
   "blue-dark": $blue-dark,
@@ -80,6 +96,10 @@ $more-colors: (
   "blue-dark": $blue-dark,
   "blue-shadow": $bg-blue-shadow,
   "gray": $gray,
+  "gray-500": $gray-500,
+  "gray-850": $gray-850,
+  "gray-900": $gray-900,
+  "gray-950": $gray-950,
   "dark-gray": $dark-gray,
   "light-gray": $light-gray,
   "black": $black,
