Dev 921 sorts dropdown does not return when user clicks away from it (#700)
* DEV-921 update react-select dependecie

* DEV-921 fix sorts dropdown

* DEV-921 fix proposals dropdown

* DEV-921 fix convert dropdown

* DEV-921 fix proposals dropdown

* DEV-921 fix tokens dropdown

* DEV-921 fix next requests

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -177,7 +177,7 @@ li {
       color: transparentize($white, 0.4);
     }
     &__menu {
-      min-width: 210px;
+      // min-width: 210px;
       border-radius: 8px;
       border: 1px solid $light-gray;
       background-color: $bg-shadow;
@@ -1257,7 +1257,6 @@ textarea.form-control {
     text-transform: uppercase;
     letter-spacing: 0.1rem;
     font-size: 12px;
-    text-align: center;
   }
 }
 
