DEV-310 remove old components

--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -15,7 +15,9 @@ $light-warning: #CCAB38;
 //Specials
 $dark-gray: #20222b;
 $gray: #c4c7d3;
+$gray-100: #E3E3E8;
 $gray-500: #73758C;
+$gray-700: #454654;
 $gray-850: #23232A;
 $gray-900: #17171C;
 $gray-950: #0C0C0E;
@@ -80,7 +82,9 @@ $more-bg: (
   "danger-70": rgba($danger, 0.7),
   "warning-30": rgba($warning, 0.3),
   "gray-70": rgba($gray, 0.7),
+  "gray-100": $gray-100,
   "gray-500": $gray-500,
+  "gray-700": $gray-700,
   "gray-850": $gray-850,
   "gray-900": $gray-900,
   "gray-950": $gray-950,
@@ -96,7 +100,9 @@ $more-colors: (
   "blue-dark": $blue-dark,
   "blue-shadow": $bg-blue-shadow,
   "gray": $gray,
+  "gray-100": $gray-100,
   "gray-500": $gray-500,
+  "gray-700": $gray-700,
   "gray-850": $gray-850,
   "gray-900": $gray-900,
   "gray-950": $gray-950,
