make conversion modal work

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -135,6 +135,9 @@ li {
 }
 
 .react-select {
+  &-container {
+    width: 100%;
+  }
   &-container & {
     &__control {
       border-color: transparent;
