--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -328,6 +328,13 @@ li {
   font-weight: 400;
 }
 
+.label-m{
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 71%;
+  font-feature-settings: 'tnum' on, 'lnum' on, 'ss04' on;
+}
+
 .text-italic {
   font-style: italic !important;
 }
@@ -470,13 +477,17 @@ li {
   }
 
   .content-list-item {
-    margin-left: -$m * 2;
-    margin-right: -$m * 2;
-    padding: $m $m * 2;
-    background-color: $dark-gray;
-    &:last-child {
-      border-radius: 0 0 math.div($m, 2) math.div($m, 2);
-    }
+    display: flex;
+    flex-direction: row;
+
+    padding: 1.25rem;
+    // margin-left: -$m * 2;
+    // margin-right: -$m * 2;
+    // padding: $m $m * 2;
+    // background-color: $dark-gray;
+    // &:last-child {
+    //   border-radius: 0 0 math.div($m, 2) math.div($m, 2);
+    // }
   }
 
   .rounded.row {
@@ -484,16 +495,6 @@ li {
     margin-right: -$m * 2;
     padding-left: $m * 2;
     padding-right: $m * 2;
-  }
-}
-
-.proposal {
-  &:nth-child(even) {
-    background-color: $bg-shadow;
-  }
-
-  &:nth-child(odd) {
-    background-color: $dark-gray;
   }
 }
 
@@ -709,20 +710,6 @@ input[type="date"]::-webkit-calendar-picker-indicator:hover {
   height: math.div($m, 4);
   border-radius: math.div($m, 6);
   background-color: rgba($white, 0.2);
-
-  .wrapper {
-    position: absolute;
-    height: math.div($m, 4);
-    background-color: #3e345b;
-  }
-
-  .wrapper-danger {
-    background-color: #895151;
-  }
-
-  .wrapper-success {
-    background-color: #4c8473;
-  }
 
   &.bg-purple {
     background-color: #3e345b !important;
