--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -462,6 +462,18 @@ li {
   }
 }
 
+.curator-list-item {
+  background-color: $bg-shadow;
+  padding: $m * 2;
+  border-radius: math.div($m, 2);
+  transition: 0.8 ease-in-out;
+  margin-bottom: $m;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
+}
+
 .content-wrapper {
   background-color: $bg-shadow;
   padding: $m * 2;
