Dev 983 re organize profile my network screen of network owner (#662)
* toasters a-ok
chain logic a-ok
authError a-ok
transaction-list sub-ok
missing: Everywhere that's importing ApplicationContext

* allows for subAction so we don't have to make several classes and can instead switch-case on the reducer

* use subAction on change-toaster

* use subAction on change-tx-list.ts

* fix names

* introduce change-show-prop.ts

* deletes not used files
uses show-prop reducer

* add dev-note to update-show-prop.ts so people are forewarned

* better note readability

* more change-toaster.ts imports

* more deletions of unused reducers

* table the loaded reducers on init instead of on each reducing

* change-service

* change-load

* does away with application-state.ts

* spacing

* remove duped import

* start contexts

* use-dao
use-network
[fix] use-settings modal true -> false
[started] use-authentication
[new reducer] change-current-user
rename previous "use-network" to "use-network-theme"
removes useCallback where not needed

* use-authentication
adds balance to currentUser
extends change-current-user

* use-repos

* use-bounty exists to load current bounty data into the state (db & chain)

* use-bounty complete

* add login and handle change to useAuth

* that major rewrite for state usage -- halfway

* draw the head of the owl

* rebased from dev

* draw the rest of the owl

* linted, patched up

* addressing own comments, currentUser can't be destroyed because it can be null

* more state nudges

* page loads, settings load

* nudge states into the right direction

* wallet connects, network changes, adds more spinners to dispatcher

* redoes wallet-balance.tsx

* initiate a network-token prop on state for ease of transition

* creates contexts for dao, network and auth

* bounty page loads

* authentication validates properly

* rebases with dev

* most of lint --fix

*

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1161,6 +1161,49 @@ a.row-button svg {
   }
 }
 
+.container-my-network {
+  border-radius: 0 0 math.div($m, 2) math.div($m, 2);
+}
+
+.my-network-tabs {
+  border-radius: math.div($m, 2) math.div($m, 2) 0 0;
+
+  .nav-item {
+    .nav-link {
+      font-family: "Space Grotesk", sans-serif;
+      font-weight: 700;
+      font-size: 16px;
+      line-height: 160%;
+      letter-spacing: 0.03em;
+      text-transform: uppercase;
+
+      border: 0;
+      border-radius: math.div($m, 2) math.div($m, 2) 0 0;
+      padding: 20px;
+
+      color: rgba($white, 0.4);
+
+
+      &.active {
+        color: $white;
+        background-color: $bg-shadow;
+      }
+    }
+  }
+  
+  &.collapsed {
+    border-radius: math.div($m, 2);
+
+    .nav-item {
+      &:first-child {
+        .nav-link {
+          border-bottom-left-radius: math.div($m, 2);
+        }
+      }
+    }
+  }
+}
+
 .github-link {
   width: max-content;
 }
