--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1774,3 +1774,7 @@ input[type="color"] {
 .btn-outline-purple {
   border-color: var(--bs-purple);
 }
+
+.select-network-dropdown {
+  width: 134px;
+}
