--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1032,10 +1032,6 @@ $c_props: (
     width: 333px;
   }
 
-  path {
-    fill: var(--bs-primary);
-  }
-
   svg {
     width: 18px !important;
     height: 18px !important;
@@ -1733,4 +1729,12 @@ input[type="color"] {
       background-color: rgba(var(--bs-info-rgb), 0.25);
     }
   }
+}
+
+.text-purple {
+  color: rgb(var(--bs-purple-rgb)) !important;
+}
+
+.btn-outline-purple {
+  border-color: var(--bs-purple);
 }
