--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -51,6 +51,7 @@ $more-bg: (
   "dark": $bg,
   "shadow": $bg-shadow,
   "opac": $bg-opac,
+  "purple": $purple,
   "purple-30": rgba($purple, 0.3),
   "blue": $blue,
   "success-15": rgba($success, 0.15),
@@ -95,6 +96,7 @@ $more-bg: (
 $more-colors: (
   "blue-dark": $blue-dark,
   "blue-shadow": $bg-blue-shadow,
+  "purple": $purple,
   "gray": $gray,
   "gray-100": $gray-100,
   "gray-500": $gray-500,
