--- a/styles/fonts.scss
+++ b/styles/fonts.scss
@@ -145,3 +145,15 @@ button,
 .small-info {
   font-size: 9px;
 }
+
+
+/* Uppercase/XS/Medium */
+.xs-medium{
+  font-family: 'Space Grotesk';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 15px;
+  letter-spacing: 0.1em;
+  font-feature-settings: 'tnum' on, 'lnum' on, 'ss04' on;
+}
