Dev 634 icons for new transactions types (#761)
* adding somes icons

* adding new icons and some fixes

* fix eslint warnings

* adding translation

* saving transactions to localStorage

* adding close network transaction

* adding network to tx

* fix read only networks

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1032,10 +1032,6 @@ $c_props: (
     width: 333px;
   }
 
-  path {
-    fill: var(--bs-primary);
-  }
-
   svg {
     width: 18px !important;
     height: 18px !important;
@@ -1577,7 +1573,7 @@ input[type="color"] {
      button, a, input, select,
      .react-select-container{
       cursor: not-allowed !important;
-      pointer-events: none;
+      pointer-events: none !important;
       opacity: 0.65;
     }
   }
@@ -1733,4 +1729,12 @@ input[type="color"] {
       background-color: rgba(var(--bs-info-rgb), 0.25);
     }
   }
+}
+
+.text-purple {
+  color: rgb(var(--bs-purple-rgb)) !important;
+}
+
+.btn-outline-purple {
+  border-color: var(--bs-purple);
 }
