--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -96,6 +96,7 @@ $more-bg: (
 $more-colors: (
   "blue-dark": $blue-dark,
   "blue-shadow": $bg-blue-shadow,
+  "purple": $purple,
   "gray": $gray,
   "gray-100": $gray-100,
   "gray-500": $gray-500,
