--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -13,6 +13,7 @@
 @import "x-popover";
 @import "x-tooltip";
 @import "x-stepper";
+@import "primer";
 
 @import "components/network-logo";
 @import "components/network-hero";
