--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,4 +1,5 @@
 @use "sass:math";
+
 @import "variables";
 @import "toasts";
 @import "vendor";
@@ -12,6 +13,7 @@
 @import "x-popover";
 @import "x-tooltip";
 @import "x-stepper";
+@import "primer";
 
 @import "components/network-logo";
 @import "components/network-hero";
@@ -143,6 +145,13 @@ li {
     .modal-content > .modal-header > .close-button {
       left: 96%;
       top: 1.5%;
+    }
+  }
+
+  .modal-xl {
+    .modal-content > .modal-header > .close-button {
+      left: 97%;
+      top: 10px;
     }
   }
 }
