--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -470,7 +470,7 @@ li {
   border-radius: math.div($m, 2);
   transition: 0.8 ease-in-out;
   margin-bottom: $m;
-
+  max-height: 193px;
   &:last-child {
     margin-bottom: 0;
   }
